# matter-esp32-ekmc16

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.cpp
main/include/: definition.h
main/include/device/: device.h  occupancysensor.h
main/include/peripheral/: pmodpirctrl.h
main/include/system/: logger.h  system.h  util.h
main/src/device/: device.cpp  occupancysensor.cpp
main/src/peripheral/: pmodpirctrl.cpp
main/src/system/: logger.cpp  system.cpp  util.cpp
main/zap-generated/: endpoint_config.h
resource/DACProvider/: onb_codes.csv
scripts/: flash_factory_dac_provider.sh  install_sdk.sh  prepare_sdk.sh
